adjusted width properties to fix wrapping text bug on landing page

--- a/src/containers/MainWrapper/MainWrapper.module.scss
+++ b/src/containers/MainWrapper/MainWrapper.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: flex-start;
   flex-grow: 1;
+  width: 100%;
 }
 
 .width_constraint {
