--- a/src/pages/LandingPage/LandingPage.module.scss
+++ b/src/pages/LandingPage/LandingPage.module.scss
@@ -65,6 +65,7 @@
   &__heading {
     display: flex;
     gap: 10px;
+    width: 100%;
     font-family: typography.$accent-secondary;
     font-size: 48px;
 
